@@ -514,6 +514,7 @@ set(pairs_Issue
     "instances/Issue/3911.cip\;-30386.2338470598\;lexdual"
     "instances/Issue/3917.cip\;+infinity\;default"
     "instances/Issue/3920.cip\;0\;presolving_milp_off"
+    "instances/Issue/3932.cip\;+infinity\;reduced_tolerance"
 )
 
 #
