@@ -1,0 +1,5 @@
+lp/solvefreq = -1
+numerics/sumepsilon = 1e-9
+numerics/feastol = 1e-9
+presolving/maxrounds = 0
+heuristics/trivial/freq = -1
