@@ -1,1 +1,2 @@
+numerics/sumepsilon = 1e-9
 numerics/feastol = 1e-9
